--- a/clinicPage.html
+++ b/clinicPage.html
@@ -93,9 +93,86 @@
                         </p>
                     </div>
                 </div>
-                <div class="row align-items-center mt-5">
-                    <div class="col-md-12 text-center">
-                        <img src="./img/0.png" width="40%" height="40%" alt="">
+                <div class="row mt-5">
+                    <div class="col-md-6">
+                        <div class="clinic-left">
+                            <h4>
+                                Upcomming mini allies clinics
+                            </h4>
+                            <div class="clinics-list">
+                                <ul>
+                                    <li class="d-flex align-items-center justify-content-between">
+                                        <div class="left-list d-flex align-items-center">
+                                            <span class="date">Nov <br><strong>12</strong></span>
+                                            <span class="ms-5">
+                                                <strong>Shooting Clinic A</strong>
+                                                <br>
+                                                Starts from 10:00 Am
+                                            </span>
+                                        </div>
+                                        <div class="right-list">
+                                            <button>Register Now</button>
+                                        </div>
+                                    </li>
+                                    <li class="d-flex align-items-center justify-content-between">
+                                        <div class="left-list d-flex align-items-center">
+                                            <span class="date">Nov <br><strong>12</strong></span>
+                                            <span class="ms-5">
+                                                <strong>Passing Clinic A</strong>
+                                                <br>
+                                                Starts from 10:00 Am
+                                            </span>
+                                        </div>
+                                        <div class="right-list">
+                                            <button>Register Now</button>
+                                        </div>
+                                    </li>
+                                    <li class="d-flex align-items-center justify-content-between">
+                                        <div class="left-list d-flex align-items-center">
+                                            <span class="date">Nov <br><strong>13</strong></span>
+                                            <span class="ms-5">
+                                                <strong>Shooting Clinic A</strong>
+                                                <br>
+                                                Starts from 10:00 Am
+                                            </span>
+                                        </div>
+                                        <div class="right-list">
+                                            <button>Register Now</button>
+                                        </div>
+                                    </li>
+                                    <li class="d-flex align-items-center justify-content-between">
+                                        <div class="left-list d-flex align-items-center">
+                                            <span class="date">Nov <br><strong>14</strong></span>
+                                            <span class="ms-5">
+                                                <strong>Shooting Clinic B</strong>
+                                                <br>
+                                                Starts from 10:00 Am
+                                            </span>
+                                        </div>
+                                        <div class="right-list">
+                                            <button>Register Now</button>
+                                        </div>
+                                    </li>
+                                    <li class="d-flex align-items-center justify-content-between">
+                                        <div class="left-list d-flex align-items-center">
+                                            <span class="date">Nov <br><strong>15</strong></span>
+                                            <span class="ms-5">
+                                                <strong>Shooting Clinic A</strong>
+                                                <br>
+                                                Starts from 10:00 Am
+                                            </span>
+                                        </div>
+                                        <div class="right-list">
+                                            <button>Register Now</button>
+                                        </div>
+                                    </li>
+
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="./img/0.png" width="100%" height="100%" alt="">
                     </div>
                 </div>
             </div>
