--- a/miniAllies.html
+++ b/miniAllies.html
@@ -94,38 +94,84 @@
                                 alt="" width="90px">
                             <!-- <h5>Mini Allies will return starting April 14th at ScoreOKC!</h5> -->
                             <br>
-                            <a href="https://soccerallies.wufoo.com/forms/s7elrsn0shejbd/" class="btnn "
-                                data-initialized="true">click here to register for
-                                Mini Allies Sessions</a>
-                            <div class="content-down">We are moving to a pricing structure starting THIS Wednesday,
-                                April 14th that will give
-                                parents multiple options for sessions.
-                                <br>
-                                <!-- <ul>
-                                    <li><a href=""><i class="fas fa-check-double me-2"></i><span>$18</span> – pay as you
-                                            play: No
-                                            commitment – drop in each session and come have fun
-                                            with us.</a></li>
-                                    <hr>
-                                    <li><a href=""><i class="fas fa-check-double me-2"></i><span>$65</span> – per month:
-                                            Yes, you
-                                            have
-                                            the option to pay one price for the entire
-                                            month.</a></li>
-                                    <hr>
-                                    <li><a href=""><i class="fas fa-check-double me-2"></i><span>$185</span> – 3-month
-                                            package:
-                                            Get 3
-                                            months for one easy price, 12
-                                            sessions – 6 concepts, and have a lot of fun!</a></li>
-                                    <hr>
-                                </ul> -->
 
 
-                                <br>
+                            <div class="miniAllies-left">
+                                <h4>
+                                    Upcomming mini allies clinics
+                                </h4>
+                                <div class="clinics-list">
+                                    <ul>
+                                        <li class="d-flex align-items-center justify-content-between">
+                                            <div class="left-list d-flex align-items-center">
+                                                <span class="date">Nov <br><strong>12</strong></span>
+                                                <span class="ms-5">
+                                                    <strong>Shooting Clinic A</strong>
+                                                    <br>
+                                                    Starts from 10:00 Am
+                                                </span>
+                                            </div>
+                                            <div class="right-list">
+                                                <button>Register Now</button>
+                                            </div>
+                                        </li>
+                                        <li class="d-flex align-items-center justify-content-between">
+                                            <div class="left-list d-flex align-items-center">
+                                                <span class="date">Nov <br><strong>12</strong></span>
+                                                <span class="ms-5">
+                                                    <strong>Passing Clinic A</strong>
+                                                    <br>
+                                                    Starts from 10:00 Am
+                                                </span>
+                                            </div>
+                                            <div class="right-list">
+                                                <button>Register Now</button>
+                                            </div>
+                                        </li>
+                                        <li class="d-flex align-items-center justify-content-between">
+                                            <div class="left-list d-flex align-items-center">
+                                                <span class="date">Nov <br><strong>13</strong></span>
+                                                <span class="ms-5">
+                                                    <strong>Shooting Clinic A</strong>
+                                                    <br>
+                                                    Starts from 10:00 Am
+                                                </span>
+                                            </div>
+                                            <div class="right-list">
+                                                <button>Register Now</button>
+                                            </div>
+                                        </li>
+                                        <li class="d-flex align-items-center justify-content-between">
+                                            <div class="left-list d-flex align-items-center">
+                                                <span class="date">Nov <br><strong>14</strong></span>
+                                                <span class="ms-5">
+                                                    <strong>Shooting Clinic B</strong>
+                                                    <br>
+                                                    Starts from 10:00 Am
+                                                </span>
+                                            </div>
+                                            <div class="right-list">
+                                                <button>Register Now</button>
+                                            </div>
+                                        </li>
+                                        <li class="d-flex align-items-center justify-content-between">
+                                            <div class="left-list d-flex align-items-center">
+                                                <span class="date">Nov <br><strong>15</strong></span>
+                                                <span class="ms-5">
+                                                    <strong>Shooting Clinic A</strong>
+                                                    <br>
+                                                    Starts from 10:00 Am
+                                                </span>
+                                            </div>
+                                            <div class="right-list">
+                                                <button>Register Now</button>
+                                            </div>
+                                        </li>
 
-
+                                    </ul>
+                                </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -149,7 +195,7 @@
                     <img src="https://images.squarespace-cdn.com/content/v1/57d2df02bebafbc1a4a5d48f/1575840564319-A4R5HH7A45K4W8U5YY7R/Mini+Allies+Character+Panel+-+Session+2.jpg?format=500w"
                         alt="" width="100%" height="100%">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 session">
                     <h6> MINI ALLIES WEEKLY SESSIONS</h6>
                     <br>
                     <br>
@@ -235,28 +281,28 @@
                     <h5> Check out his coaching pedigree below!</h5>
                     <br>
                     <ul>
-                        <li><i class="fas fa-check-double me-2"></i>Graduate National C certification 
+                        <li><i class="fas fa-check-double me-2"></i>Graduate National C certification
                         </li>
                         <hr>
                         <li><i class="fas fa-check-double me-2"></i>Assistant Coach - MacArthur High School -
-                                2001 - 2007</li>
+                            2001 - 2007</li>
                         <hr>
                         <li><i class="fas fa-check-double me-2"></i>Lawton Soccer Academy Head Coach U17 -
-                                U19 2007-2012</li>
+                            U19 2007-2012</li>
                         <hr>
                         <li><i class="fas fa-check-double me-2"></i>Head Coach - Edmond Legends - 2016-2017
-                            
+
                         </li>
                         <hr>
                         <li><i class="fas fa-check-double me-2"></i>Head Coach Crossings Middle School -
-                                2017
+                            2017
                         </li>
                         <hr>
                         <li><i class="fas fa-check-double me-2"></i>Head Coach Crossings Girl's Varsity 2018
-                                - Current</li>
+                            - Current</li>
                         <hr>
                         <li><i class="fas fa-check-double me-2"></i>Soccer Allies - Coach - 2018 -
-                                Current
+                            Current
                         </li>
 
                     </ul>
